--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -3,5 +3,9 @@
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css");
 
 #app {
-  font-family: "Poppins", Helvetica, Arial, sans-serif;
+  font-family: "lineto-circular", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+  font-size: 112.5%;
+  line-height: 1.44;
+  color: #1d1d1d;
+  -webkit-font-smoothing: antialiased;
 }
